--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,8 @@ import "../styles/global.css"
     <div class="h-screen snap-start py-20">
       <Hero
         title="WELCOME TO THE MARINE CORPS BIRTHDAY BALL"
-        padding='pt-8'
+        content="Find your seat"
+        padding='pt-12'
       />
     </div>
 </Layout>
