--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,7 +13,7 @@ import "../styles/global.css"
 
 <Layout title="404">
   <div class="max-h-screen overflow-y-scroll scrollbar-hide snap-start snap-y snap-mandatory">
-    <div class="h-screen snap-start py-20">
+    <div class="h-screen snap-start md:py-20">
       <Hero
         title="404"
         content="Page not found."
