--- a/src/pages/find_table.astro
+++ b/src/pages/find_table.astro
@@ -1,22 +1,20 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Hero from '../components/marinecorps/Hero.astro'
+import TableNumber from '../components/react/TableNumber.jsx'
 import DropDown from '../components/react/Dropdown.jsx'
 import RedButton from '../components/buttons/RedButton.astro'
 
 import "../styles/global.css"
+
+const search = Astro.url.searchParams.get('search')! || '';
+
+
 ---
+
+
 <Layout title="">
   <div class="max-h-screen overflow-y-scroll scrollbar-hide snap-start snap-y snap-mandatory">
     <div class="h-screen snap-start md:py-20">
-      <Hero
-        title="WELCOME TO THE MARINE CORPS BALL"
-        content="Find your seat"
-        padding='pt-12'
-      />
-      <div class="flex justify-center mt-10">
-        <DropDown client:load/>
-      </div>
+      <TableNumber client:only="react" />
     </div>
-    
 </Layout>
