--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,5 +22,8 @@ const { title = null } = Astro.props
   </head>
   <body class="bg-slate-200 dark:bg-slate-800 dark:text-white font-rubik">
     <slot />
+    <div style=" max-width: fit-content; margin-left: auto; margin-right: auto; padding-bottom: 100px;">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/HKpfV_dKOWY?si=ywwcxcuYSLsMJJ5B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+    </div>
   </body>
 </html>
