Add back api key requirement

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,9 @@ import "../styles/global.css";
 ---
 <Layout title="">
   <div
-    class="max-h-screen overflow-y-scroll scrollbar-hide snap-start snap-y snap-mandatory"
+    class="max-h-screen overflow-y-scroll scrollbar-hide snap-y snap-mandatory"
   >
-    <div class="h-screen snap-start md:py-20">
+    <div class="h-screen md:py-20">
       <Hero
         title="WELCOME TO THE MARINE CORPS BALL"
         content="Find your seat"
@@ -28,6 +28,9 @@ import "../styles/global.css";
           width="250%"
           height="35%"
         />
+      </div>
+      <div style=" max-width: fit-content; margin-left: auto; margin-right: auto; padding-bottom: 100px !important; padding-top: 100px !important;">
+        <iframe width="auto" height="auto" src="https://www.youtube.com/embed/HKpfV_dKOWY?si=ywwcxcuYSLsMJJ5B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
       </div>
     </div>
   </div>
