--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import "../styles/global.css";
 ---
 <Layout title="">
   <div
-    class="max-h-screen overflow-y-scroll scrollbar-hide snap-y snap-mandatory"
+    class="max-h-screen overflow-y-scroll scrollbar-hide"
   >
     <div class="h-screen md:py-20">
       <Hero
