--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title = null } = Astro.props
     />
     <title>MIU {title && "-"} {title}</title>
   </head>
-  <body class="bg-slate-200 dark:bg-slate-800 dark:text-white font-rubik">
+  <body class="bg-slate-200 text-slate-800 dark:bg-slate-800 dark:text-white font-rubik">
     <slot />
     
   </body>
