--- a/src/pages/error.astro
+++ b/src/pages/error.astro
@@ -14,7 +14,7 @@ import "../styles/global.css";
   >
     <div class="h-screen snap-start md:py-20">
       <Hero
-        title="WELCOME TO THE MARINE CORPS BALL"
+        title="Welcome to the 249th Marine Corps Birthday Ball"
         content="Please scan any of the QR codes found throughout the venue."
         padding="pt-12"
       />
@@ -24,6 +24,7 @@ import "../styles/global.css";
           alt="Marine Innovation" 
           width="250%"
           height="35%"
+          class="filter invert dark:invert-0"
         />
       </div>
     </div>
