--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import "../styles/global.css";
   >
     <div class="h-screen md:py-20">
       <Hero
-        title="WELCOME TO THE MARINE CORPS BALL"
+        title="Welcome to the 249th Marine Corps Birthday Ball"
         content="Find your seat"
         padding="pt-12"
       />
@@ -27,6 +27,7 @@ import "../styles/global.css";
           alt="Marine Innovation" 
           width="250%"
           height="35%"
+          class="filter invert dark:invert-0"
         />
       </div>
       <div style=" max-width: fit-content; margin-left: auto; margin-right: auto; padding-bottom: 100px !important; padding-top: 100px !important;">
