Fix styling on Commandant's message

--- a/src/pages/find_table.astro
+++ b/src/pages/find_table.astro
@@ -44,11 +44,13 @@ const search = Astro.url.searchParams.get('search')! || '';
       <p class="py-5">
         As I've said before, it is the honor of my lifetime to be a Marine and serve as your Commandant. I'm proud to stand alongside each of you, and I'm excited to see what the future holds for our Corps. When I travel to visit Marines here at home and deployed around the globe, I find absolute confidence that this generation of Marines has what it takes to uphold our Corps' legacy and prevail in any conflict we face. Happy Birthday, Marines!
       </p>
+      <p style="text-align: center;" class="pt-10">Semper Fidelis,</p>
     </div>
-    <div class="px-20 py-20">
+    <div class="px-20 py-5">
       <Image 
             src={cmcSignature} 
             alt="Marine Innovation" 
           />
     </div>
+    <p style="text-align: center;" class="pb-20">General, U.S. Marine Corps <br/>Commandant of the Marine Corps</p>
 </Layout>
