--- a/src/pages/find_table.astro
+++ b/src/pages/find_table.astro
@@ -52,5 +52,9 @@ const search = Astro.url.searchParams.get('search')! || '';
             alt="Marine Innovation" 
           />
     </div>
-    <p style="text-align: center;" class="pb-20">General, U.S. Marine Corps <br/>Commandant of the Marine Corps</p>
+    <p style="text-align: center;" class="pb-10">General, U.S. Marine Corps <br/>Commandant of the Marine Corps</p>
+    
+    <div style=" max-width: fit-content; margin-left: auto; margin-right: auto; padding-bottom: 100px !important; padding-top: 100px !important;">
+      <iframe width="auto" height="auto" src="https://www.youtube.com/embed/HKpfV_dKOWY?si=ywwcxcuYSLsMJJ5B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+    </div>
 </Layout>
