--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,8 +12,8 @@ import "../styles/global.css"
 ---
 
 <Layout title="404">
-  <div class="max-h-screen overflow-y-scroll scrollbar-hide snap-start snap-y snap-mandatory">
-    <div class="h-screen snap-start md:py-20">
+  <div class="">
+    <div class="md:py-20">
       <Hero
         title="404"
         content="Page not found."
