--- a/src/pages/find_table.astro
+++ b/src/pages/find_table.astro
@@ -18,7 +18,7 @@ const search = Astro.url.searchParams.get('search')! || '';
 
 
 <Layout title="">
-  <div class="h-screen overflow-y-scroll scrollbar-hide">
+  <div class="">
     <div class="md:py-20">
       <TableNumber client:only="react" />
     </div>
