--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,9 @@ import "../styles/global.css";
 ---
 <Layout title="">
   <div
-    class="max-h-screen overflow-y-scroll scrollbar-hide"
+    class=""
   >
-    <div class="h-screen md:py-20">
+    <div class="md:py-20">
       <Hero
         title="Welcome to the 249th Marine Corps Birthday Ball"
         content="Find your seat"
