--- a/src/pages/table_map.astro
+++ b/src/pages/table_map.astro
@@ -7,8 +7,8 @@ import SeatingMap from '../components/react/SeatingMap.jsx'
 import "../styles/global.css"
 ---
 <Layout title="">
-  <div class="max-h-screen overflow-auto">
-    <div class="h-screen  overflow-auto">
+  <div class="overflow-auto">
+    <div class="overflow-auto">
       <SeatingMap client:only="react"/>
     </div>
     
