--- a/src/pages/error.astro
+++ b/src/pages/error.astro
@@ -10,9 +10,9 @@ import "../styles/global.css";
 ---
 <Layout title="">
   <div
-    class="max-h-screen overflow-y-scroll scrollbar-hide snap-start snap-y snap-mandatory"
+    class=""
   >
-    <div class="h-screen snap-start md:py-20">
+    <div class=" md:py-20">
       <Hero
         title="Welcome to the 249th Marine Corps Birthday Ball"
         content="Please scan any of the QR codes found throughout the venue."
