Fix font color, undefined, and CMC message header

--- a/src/pages/find_table.astro
+++ b/src/pages/find_table.astro
@@ -22,13 +22,16 @@ const search = Astro.url.searchParams.get('search')! || '';
     <div class="md:py-20">
       <TableNumber client:only="react" />
     </div>
-    <div class="px-20 py-20">
+    <div class="px-20 py-10">
       <Image 
             src={cmcFlag} 
             alt="Marine Innovation" 
           />
     </div>
     <div class="px-5">
+      <p style="text-align: center;" class="font-bold pb-5">10 November 2024</p>
+      <p style="text-align: center;" class="font-bold py-5">A MESSAGE FROM THE COMMANDANT OF THE MARINE CORPS</p>
+        
       <i>
       <p class="py-5">
         For 249 years, Marines have served as our Nation's sentinels of freedom. As we celebrate our Corps' birthday this year, I encourage all Marines to reflect on our legacy forged in blood on battlefields since 1775, and to rededicate ourselves to carrying that legacy untarnished into the future. Collectively, we who wear the Eagle, Globe, and Anchor have an obligation to uphold the ideals of self-discipline, warfighting proficiency, professionalism, and personal conduct that define what it means to be a Marine. I know you are all up to the task.
@@ -46,7 +49,7 @@ const search = Astro.url.searchParams.get('search')! || '';
         As I've said before, it is the honor of my lifetime to be a Marine and serve as your Commandant. I'm proud to stand alongside each of you, and I'm excited to see what the future holds for our Corps. When I travel to visit Marines here at home and deployed around the globe, I find absolute confidence that this generation of Marines has what it takes to uphold our Corps' legacy and prevail in any conflict we face. Happy Birthday, Marines!
       </p>
     </i>
-      <p style="text-align: center;" class="pt-10">Semper Fidelis,</p>
+      <p style="text-align: center;" class="pt-5">Semper Fidelis,</p>
     </div>
     <div class="px-20 py-5">
       <Image 
