Sections to table page

--- a/src/components/marinecorps/Hero.astro
+++ b/src/components/marinecorps/Hero.astro
@@ -22,7 +22,7 @@ const { title, content, link = null, linkText = null, padding } = Astro.props
   <!-- End Title -->
 
   <div class="max-w-3xl mx-auto mt-5 text-center">
-    <p class="text-lg text-slate-600 dark:text-slate-400">
+    <p class="text-lg text-slate-600 dark:text-slate-400 tracking-wide">
       {content}
     </p>
   </div>
