--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import "../styles/global.css";
     <div class="md:py-20">
       <Hero
         title="Welcome to the 249th Marine Corps Birthday Ball"
-        content="Find your seat"
+        content="Find your table number"
         padding="pt-12"
       />
       <div class="flex justify-center mt-10">
