--- a/src/pages/find_table.astro
+++ b/src/pages/find_table.astro
@@ -1,71 +1,115 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import TableNumber from '../components/react/TableNumber.jsx'
-import DropDown from '../components/react/Dropdown.jsx'
-import RedButton from '../components/buttons/RedButton.astro'
+import Layout from "../layouts/Layout.astro";
+import TableNumber from "../components/react/TableNumber.jsx";
 
-import "../styles/global.css"
-import { Image } from 'astro:assets';
+import "../styles/global.css";
+import { Image } from "astro:assets";
 import cmcFlag from "../../assets/CMC Flag.png";
 import cmcSignature from "../../assets/CMC Signature.png";
 
-
-
-const search = Astro.url.searchParams.get('search')! || '';
-
-
+const search = Astro.url.searchParams.get("search")! || "";
 ---
-
 
 <Layout title="">
   <div class="">
-    <div class="md:py-20">
-      <TableNumber client:only="react" />
-    </div>
-    <div class="px-20 py-10">
-      <Image 
-            src={cmcFlag} 
-            alt="Marine Innovation" 
-          />
-    </div>
-    <div class="px-5">
-      <p style="text-align: center;" class="font-bold pb-5">10 November 2024</p>
-      <p style="text-align: center;" class="font-bold py-5">A MESSAGE FROM THE COMMANDANT OF THE MARINE CORPS</p>
-        
-      <i>
-      <p class="py-5">
-        For 249 years, Marines have served as our Nation's sentinels of freedom. As we celebrate our Corps' birthday this year, I encourage all Marines to reflect on our legacy forged in blood on battlefields since 1775, and to rededicate ourselves to carrying that legacy untarnished into the future. Collectively, we who wear the Eagle, Globe, and Anchor have an obligation to uphold the ideals of self-discipline, warfighting proficiency, professionalism, and personal conduct that define what it means to be a Marine. I know you are all up to the task.
-      </p>
-      <p class="py-5">
-        Twenty years ago this month, Marines fought and won the Second Battle of Fallujah, a brutal, grinding house to house fight, whose victory ultimately paved the way for the stabilization of the Republic of Iraq. Often in Iraq there were no true front lines, and by necessity, Fallujah was a battle in which every Marine fought, demonstrating once again our cornerstone philosophy that Every Marine is a Rifleman.
-      </p>
-      <p class="py-5">
-        Our history bears witness to Marines of all stripes picking up their rifles and fighting for Corps and Country when the call came. From Wake Island to the Chosin Reservoir to Khe Sanh to Camp Bastion, every Marine fought. Our future battles will be no different. Our rear areas will be as vulnerable as our front lines and every Marine from our infantry battalions to our aviation squadrons to our headquarters and support elements will have to stand-to when called.
-      </p>
-      <p class="py-5">
-        Preparing for the threats of the future requires the same exceptional standards and ironclad discipline that are the hallmarks of our Corps. Twenty years ago in Fallujah, our predecessors staunchly adhered to these virtues, earned our Nation's trust, and ensured the U.S. Marine Corps would remain the most feared fighting force in the world. It is our sworn duty to uphold those standards and stay true to our Core Values of Honor, Courage, and Commitment. Though technology and equipment change, the Marine Corps' culture of excellence must not. The road ahead is far from certain, but our ethos will never change — Every Marine a Rifleman and Everyone Fights.
-      </p>
-      <p class="py-5">
-        As I've said before, it is the honor of my lifetime to be a Marine and serve as your Commandant. I'm proud to stand alongside each of you, and I'm excited to see what the future holds for our Corps. When I travel to visit Marines here at home and deployed around the globe, I find absolute confidence that this generation of Marines has what it takes to uphold our Corps' legacy and prevail in any conflict we face. Happy Birthday, Marines!
-      </p>
-    </i>
-      <p style="text-align: center;" class="pt-5">Semper Fidelis,</p>
-    </div>
-    <div class="px-20 py-5">
-      <Image 
-            src={cmcSignature} 
-            alt="Marine Innovation" 
-          />
-    </div>
-    <p style="text-align: center;" class="pb-5">General, U.S. Marine Corps <br/>Commandant of the Marine Corps</p>
-    
-    <div style=" max-width: fit-content; margin-left: auto; margin-right: auto; padding-bottom: 100px !important; padding-top: 50px !important;">
-      <iframe width="auto" height="auto" src="https://www.youtube.com/embed/HKpfV_dKOWY?si=ywwcxcuYSLsMJJ5B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-    </div>
-    <div class="flex justify-center pb-20">
-        <div class="inline-flex items-center justify-center gap-2 px-4 py-3 mb-2 text-xs font-semibold leading-loose text-white transition-all bg-red-800 border border-transparent rounded-md hover:ring-2 focus:outline-none focus:ring-2 ring-offset-white focus:ring-red-500 hover:ring-red-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800">
-            <button onclick="history.back()">Go Back</button>                    
-        </div>
-    </div>
+    <TableNumber client:only="react" />
+  </div>
+  <div class="px-20 py-10">
+    <Image
+      src={cmcFlag}
+      alt="Marine Innovation"
+    />
+  </div>
+  <div class="px-5 font-serif text-lg">
+    <p class="pb-5 text-center">10 November 2024</p>
+    <p class="font-bold py-5 text-center">
+      A MESSAGE FROM THE COMMANDANT OF THE MARINE CORPS
+    </p>
 
+    <div class="grid grid-cols-1 gap-10 italic text-left">
+      <p class="indent-8">
+        For 249 years, Marines have served as our Nation's sentinels of freedom.
+        As we celebrate our Corps' birthday this year, I encourage all Marines
+        to reflect on our legacy forged in blood on battlefields since 1775, and
+        to rededicate ourselves to carrying that legacy untarnished into the
+        future. Collectively, we who wear the Eagle, Globe, and Anchor have an
+        obligation to uphold the ideals of self-discipline, warfighting
+        proficiency, professionalism, and personal conduct that define what it
+        means to be a Marine. I know you are all up to the task.
+      </p>
+      <p class="indent-8">
+        Twenty years ago this month, Marines fought and won the Second Battle of
+        Fallujah, a brutal, grinding house to house fight, whose victory
+        ultimately paved the way for the stabilization of the Republic of Iraq.
+        Often in Iraq there were no true front lines, and by necessity, Fallujah
+        was a battle in which every Marine fought, demonstrating once again our
+        cornerstone philosophy that Every Marine is a Rifleman.
+      </p>
+      <p class="indent-8">
+        Our history bears witness to Marines of all stripes picking up their
+        rifles and fighting for Corps and Country when the call came. From Wake
+        Island to the Chosin Reservoir to Khe Sanh to Camp Bastion, every Marine
+        fought. Our future battles will be no different. Our rear areas will be
+        as vulnerable as our front lines and every Marine from our infantry
+        battalions to our aviation squadrons to our headquarters and support
+        elements will have to stand-to when called.
+      </p>
+      <p class="indent-8">
+        Preparing for the threats of the future requires the same exceptional
+        standards and ironclad discipline that are the hallmarks of our Corps.
+        Twenty years ago in Fallujah, our predecessors staunchly adhered to
+        these virtues, earned our Nation's trust, and ensured the U.S. Marine
+        Corps would remain the most feared fighting force in the world. It is
+        our sworn duty to uphold those standards and stay true to our Core
+        Values of Honor, Courage, and Commitment. Though technology and
+        equipment change, the Marine Corps' culture of excellence must not. The
+        road ahead is far from certain, but our ethos will never change — Every
+        Marine a Rifleman and Everyone Fights.
+      </p>
+      <p class="indent-8">
+        As I've said before, it is the honor of my lifetime to be a Marine and
+        serve as your Commandant. I'm proud to stand alongside each of you, and
+        I'm excited to see what the future holds for our Corps. When I travel to
+        visit Marines here at home and deployed around the globe, I find
+        absolute confidence that this generation of Marines has what it takes to
+        uphold our Corps' legacy and prevail in any conflict we face. Happy
+        Birthday, Marines!
+      </p>
+    </div>
+    <p class="text-center pt-5 text-lg tracking-wider">Semper Fidelis,</p>
+    <div class="px-20 py-5">
+      <Image
+        src={cmcSignature}
+        alt="Marine Innovation"
+      />
+    </div>
+    <p class="text-center">
+      General, U.S. Marine Corps <br />Commandant of the Marine Corps
+    </p>
+  </div>
+
+  <div class="border-b-2 mx-12 my-10"></div>
+  <p class="text-center pb-5 mx-12">
+    The 249th Marine Corps Birthday Message Video
+  </p>
+  <iframe
+    class="mx-auto object-cover"
+    width="auto"
+    height="auto"
+    src="https://www.youtube.com/embed/HKpfV_dKOWY?si=ywwcxcuYSLsMJJ5B"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin"
+    allowfullscreen
+  ></iframe>
+  <div class="border-b-2 mx-12 my-10"></div>
+
+  <div class="flex justify-center pb-10">
+    <button
+      class="inline-flex items-center justify-center gap-2 px-4 py-3 mb-2 text-xs font-semibold leading-loose text-white transition-all bg-red-800 border border-transparent rounded-md hover:ring-2 focus:outline-none focus:ring-2 ring-offset-white focus:ring-red-500 hover:ring-red-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
+      onclick="history.back()"
+      >Go Back</button
+    >
+  </div>
 </Layout>
