--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import "../styles/global.css";
 
 ---
 <Layout title="">
-  <div class="theatre">
+  <div class="theatre" tabindex="0" onclick="" >
     <div class="curtain-left z-10"></div>
     <div class="curtain-right z-10"></div>
     <div
