--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ const { title = null } = Astro.props
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap"
     />
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <title>MIU {title && "-"} {title}</title>
   </head>
   <body class="bg-slate-200 text-slate-800 dark:bg-slate-800 dark:text-white font-rubik">
