--- a/src/pages/find_table.astro
+++ b/src/pages/find_table.astro
@@ -28,7 +28,7 @@ const search = Astro.url.searchParams.get("search")! || "";
     const displaySVG = urlParams
       .get("name")
       .toLowerCase()
-      .includes("william crum".toLowerCase())
+      .includes("erik rye".toLowerCase())
       ? bee
       : ega;
 
